# TiledCpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
tiledcpp/: config.hpp  tiledcpp.cpp  tiledcpp.hpp
tiledcpp/detail/: parse_helpers.cpp  parse_helpers.hpp  xml_helpers.hpp
tiledcpp/types/: array2d.hpp  image.cpp  image.hpp  math.cpp  math.hpp  properties.cpp  properties.hpp  result.hpp
tiledcpp_tests/: CMakeLists.txt  array2d_tests.cpp  parse_helpers_tests.cpp  tiledcpp_tests.cpp
tiledcpp_tests/files/: map1.tmx  map2.tmx  map3.tmx  tileset.tsx  tileset2.tsx  tileset3.tsx  tileset4.tsx  tileset5.tsx
